@@ -30,6 +30,13 @@ Breaking Changes
   dispatched. Previously this would've likely been 0.0, or the previously
   dispatched event.
 
+- Missing network timestamp metadata on remote events is not set to the local
+  network time anymore by default. This potentially hid useful debugging information
+  about another node not sending timestamp metadata. The old behavior can be
+  re-enabled as follows:
+
+	redef EventMetadata::add_missing_remote_network_timestamp = T;
+
 New Functionality
 -----------------
 
